fixed menu is nor covering whole screen after scroll on mobile devices

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -486,7 +486,7 @@
     flex-direction: column;
   } */
   .nav-open {
-    height: 100vh;
+    min-height: 100vh;
     position: sticky;
     background-color: #000000;
     overflow-y: scroll;
